fixing reset button on mobile

--- a/styles/sass/_mediaqueries.scss
+++ b/styles/sass/_mediaqueries.scss
@@ -47,9 +47,14 @@
     }
     
     /* game page styles */
-    .gamePage h2 {
+    .gamePage {
+        h2 {
         @include fontSize(35);
         padding: 15px 0;
+        }
+        .resetButton {
+            margin-bottom: 10px;
+        }
     }
 
     .content {
