--- a/styles/style.css
+++ b/styles/style.css
@@ -1289,6 +1289,9 @@ button:hover {
     font-size: 3.5rem;
     padding: 15px 0;
   }
+  .gamePage .resetButton {
+    margin-bottom: 10px;
+  }
   .content {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
